hphp/hack/test/typecheck/noreturn_typehint_basic_bad1.php.exp
File "noreturn_typehint_basic_bad1.php", line 3, characters 10-17:
Invalid return type (Typing[4336])
File "noreturn_typehint_basic_bad1.php", line 3, characters 10-17:
Expected void because this function does not always return a value
File "noreturn_typehint_basic_bad1.php", line 3, characters 22-29:
But got noreturn
